--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -219,6 +219,7 @@
     <ClCompile Include="class\GameObjects\Attack\Explosion\Explosion.cpp" />
     <ClCompile Include="class\Componets\Input\Device\KeyboardDevice.cpp" />
     <ClCompile Include="class\Effect\Emitter\Emitter.cpp" />
+    <ClCompile Include="class\Effect\EffectManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\StateBase.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\WaitState.cpp" />
@@ -342,6 +343,7 @@
     <ClInclude Include="class\Effect\Particle\Particle.h" />
     <ClInclude Include="class\Effect\Particle\Components\Child\VelocityComponent.h" />
     <ClInclude Include="class\Effect\Emitter\Emitter.h" />
+    <ClInclude Include="class\Effect\EffectManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
