--- a/resources/json/Bullets/Launcher.json
+++ b/resources/json/Bullets/Launcher.json
@@ -10,7 +10,7 @@
     ],
     "float :AttackPower": 100.0,
     "float :ElapsedTime": 3.0,
-    "float :Speed": 0.30000001192092896,
+    "float :Speed": 2.0,
     "int32_t :ImpactType": 1,
     "int32_t :MovementType": 0
 }
