--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -150,6 +150,8 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="class\GameObjects\Camera\Effect\Shake\CameraShake.cpp" />
+    <ClCompile Include="class\GameObjects\Camera\Effect\CameraEffectHandler.cpp" />
     <ClCompile Include="class\Componets\Input\Device\GamePadDevice.cpp" />
     <ClCompile Include="class\Effect\Utility\DeltaTimer.cpp" />
     <ClCompile Include="class\Componets\Input\Device\LeverDevice.cpp" />
@@ -245,6 +247,10 @@
     <ClCompile Include="class\GameObjects\PenetrationResolver\PenetrationResolver.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="class\GameObjects\Camera\Effect\Shake\CameraShake.h" />
+    <ClInclude Include="class\GameObjects\Camera\CameraConfig.h" />
+    <ClInclude Include="class\GameObjects\Camera\Effect\CameraEffect.h" />
+    <ClInclude Include="class\GameObjects\Camera\Effect\CameraEffectHandler.h" />
     <ClInclude Include="class\Componets\Input\Device\GamePadDevice.h" />
     <ClInclude Include="class\Componets\Input\Device\LeverDevice.h" />
     <ClInclude Include="class\Componets\Input\InputConfig.h" />
@@ -283,6 +289,7 @@
     <ClInclude Include="class\GameObjects\Player\Actions\IActions.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\MoveController.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\WeaponController.h" />
+    <ClInclude Include="class\GameObjects\Player\PlayerConfig.h" />
     <ClInclude Include="class\GameObjects\UI\BackGround.h" />
     <ClInclude Include="class\GameObjects\UI\NumPlane.h" />
     <ClInclude Include="class\GameObjects\UI\ScoreUI\ScoreManager.h" />
