回避を加速機能に変更

--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -173,7 +173,7 @@
     <ClCompile Include="class\Componets\Math.cpp" />
     <ClCompile Include="class\Componets\Timer.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\ReadyToAttackState.cpp" />
-    <ClCompile Include="class\GameObjects\Player\Actions\Action\Evasion\Evasion.cpp" />
+    <ClCompile Include="class\GameObjects\Player\Actions\Action\Boost\Boost.cpp" />
     <ClCompile Include="class\GameObjects\Player\Actions\Action\Move\Move.cpp" />
     <ClCompile Include="class\GameObjects\Player\Actions\Action\None\NoneAction.cpp" />
     <ClCompile Include="class\GameObjects\Player\Actions\MoveController.cpp" />
@@ -282,7 +282,7 @@
     <ClInclude Include="class\Componets\Timer.h" />
     <ClInclude Include="class\GameObjects\Enemy\State\ReadyToAttackState.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\ActionConfig.h" />
-    <ClInclude Include="class\GameObjects\Player\Actions\Action\Evasion\Evasion.h" />
+    <ClInclude Include="class\GameObjects\Player\Actions\Action\Boost\Boost.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\Action\IAction.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\Action\Move\Move.h" />
     <ClInclude Include="class\GameObjects\Player\Actions\Action\None\NoneAction.h" />
