--- a/FL1.vcxproj.filters
+++ b/FL1.vcxproj.filters
@@ -96,7 +96,7 @@
     <ClCompile Include="DirectXGame\Externals\imnodes\imnodes.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="class\GameObjects\Player\Actions\Action\Evasion\Evasion.cpp">
+    <ClCompile Include="class\GameObjects\Player\Actions\Action\Boost\Boost.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="class\GameObjects\Player\Actions\Action\Move\Move.cpp">
@@ -404,7 +404,7 @@
     <ClInclude Include="DirectXGame\Externals\imnodes\imnodes.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="class\GameObjects\Player\Actions\Action\Evasion\Evasion.h">
+    <ClInclude Include="class\GameObjects\Player\Actions\Action\Boost\Boost.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="class\GameObjects\Player\Actions\Action\Move\Move.h">
