--- a/FL1.vcxproj.filters
+++ b/FL1.vcxproj.filters
@@ -312,6 +312,9 @@
     <ClCompile Include="class\GameObjects\Camera\Effect\BoundMove\CameraBound.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="class\Componets\BehaviourTree\CompositeNode\RandomSelector.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\scene\TestScene.h">
@@ -687,6 +690,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="class\GameObjects\Camera\Effect\BoundMove\CameraBound.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="class\Componets\BehaviourTree\CompositeNode\RandomSelector.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
