--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -150,6 +150,8 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="class\GameObjects\Tutorial\TutorialData\MoveTutorial.cpp" />
+    <ClCompile Include="class\GameObjects\Tutorial\TutorialData\BaseTutorialData.cpp" />
     <ClCompile Include="class\Componets\BehaviourTree\CompositeNode\RandomSelector.cpp" />
     <ClCompile Include="class\Componets\Shake.cpp" />
     <ClCompile Include="class\GameObjects\Camera\Effect\BoundMove\CameraBound.cpp" />
@@ -197,6 +199,7 @@
     <ClCompile Include="class\GameObjects\Weapon\IWeapon.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Melee\IMelee.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Melee\Melee.cpp" />
+    <ClCompile Include="class\scene\TutorialScene.cpp" />
     <ClCompile Include="class\scene\GameScene.cpp" />
     <ClCompile Include="class\scene\ResultScene.cpp" />
     <ClCompile Include="class\scene\TestScene.cpp" />
@@ -251,8 +254,11 @@
     <ClCompile Include="class\Effect\Particle\Particle.cpp" />
     <ClCompile Include="class\GameObjects\PenetrationResolver\PenetrationResolver.cpp" />
     <ClCompile Include="class\GameObjects\WaveManager.cpp" />
+    <ClCompile Include="class\GameObjects\Tutorial\Tutorial.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="class\GameObjects\Tutorial\TutorialData\MoveTutorial.h" />
+    <ClInclude Include="class\GameObjects\Tutorial\TutorialData\BaseTutorialData.h" />
     <ClInclude Include="class\Componets\BehaviourTree\CompositeNode\RandomSelector.h" />
     <ClInclude Include="class\Componets\Shake.h" />
     <ClInclude Include="class\GameObjects\Camera\Effect\BoundMove\CameraBound.h" />
@@ -315,6 +321,7 @@
     <ClInclude Include="class\GameObjects\Weapon\Melee\IMelee.h" />
     <ClInclude Include="class\GameObjects\Weapon\Melee\Melee.h" />
     <ClInclude Include="class\GameObjects\Weapon\WeaponConfig.h" />
+    <ClInclude Include="class\scene\TutorialScene.h" />
     <ClInclude Include="class\scene\GameScene.h" />
     <ClInclude Include="class\scene\ResultScene.h" />
     <ClInclude Include="class\scene\TestScene.h" />
@@ -380,6 +387,7 @@
     <ClInclude Include="class\Effect\EffectEditor.h" />
     <ClInclude Include="class\GameObjects\PenetrationResolver\PenetrationResolver.h" />
     <ClInclude Include="class\GameObjects\WaveManager.h" />
+    <ClInclude Include="class\GameObjects\Tutorial\Tutorial.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
