--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="class\GameObjects\Player\Actions\WeaponController.cpp" />
     <ClCompile Include="class\GameObjects\UI\BackGround.cpp" />
     <ClCompile Include="class\GameObjects\UI\NumPlane.cpp" />
+    <ClCompile Include="class\GameObjects\UI\Radar\Radar.cpp" />
     <ClCompile Include="class\GameObjects\UI\ScoreUI\ScoreManager.cpp" />
     <ClCompile Include="class\GameObjects\UI\ScoreUI\ScoreUI.cpp" />
     <ClCompile Include="class\GameObjects\Weapon\Components\Magazine.cpp" />
@@ -285,6 +286,7 @@
     <ClInclude Include="class\GameObjects\Player\Actions\WeaponController.h" />
     <ClInclude Include="class\GameObjects\UI\BackGround.h" />
     <ClInclude Include="class\GameObjects\UI\NumPlane.h" />
+    <ClInclude Include="class\GameObjects\UI\Radar\Radar.h" />
     <ClInclude Include="class\GameObjects\UI\ScoreUI\ScoreManager.h" />
     <ClInclude Include="class\GameObjects\UI\ScoreUI\ScoreUI.h" />
     <ClInclude Include="class\GameObjects\Weapon\Components\Magazine.h" />
