--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -150,6 +150,8 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="class\GameObjects\Tutorial\TutorialData\AttackTutorial.cpp" />
+    <ClCompile Include="class\GameObjects\Tutorial\TutorialData\CollectTutorial.cpp" />
     <ClCompile Include="class\GameObjects\Tutorial\TutorialData\MoveTutorial.cpp" />
     <ClCompile Include="class\GameObjects\Tutorial\TutorialData\BaseTutorialData.cpp" />
     <ClCompile Include="class\Componets\BehaviourTree\CompositeNode\RandomSelector.cpp" />
@@ -238,6 +240,8 @@
     <ClCompile Include="class\Effect\Emitter\Emitter.cpp" />
     <ClCompile Include="class\Effect\EffectManager.cpp" />
     <ClCompile Include="class\Effect\EffectEditor.cpp" />
+    <ClCompile Include="class\Componets\EasingEditor.cpp" />
+    <ClCompile Include="class\Componets\EaseMachine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\StateBase.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\WaitState.cpp" />
@@ -257,6 +261,8 @@
     <ClCompile Include="class\GameObjects\Tutorial\Tutorial.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="class\GameObjects\Tutorial\TutorialData\AttackTutorial.h" />
+    <ClInclude Include="class\GameObjects\Tutorial\TutorialData\CollectTutorial.h" />
     <ClInclude Include="class\GameObjects\Tutorial\TutorialData\MoveTutorial.h" />
     <ClInclude Include="class\GameObjects\Tutorial\TutorialData\BaseTutorialData.h" />
     <ClInclude Include="class\Componets\BehaviourTree\CompositeNode\RandomSelector.h" />
@@ -388,6 +394,8 @@
     <ClInclude Include="class\GameObjects\PenetrationResolver\PenetrationResolver.h" />
     <ClInclude Include="class\GameObjects\WaveManager.h" />
     <ClInclude Include="class\GameObjects\Tutorial\Tutorial.h" />
+    <ClInclude Include="class\Componets\EasingEditor.h" />
+    <ClInclude Include="class\Componets\EaseMachine.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
