--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="class\GameObjects\Weapon\Melee\Melee.cpp" />
     <ClCompile Include="class\scene\GameScene.cpp" />
     <ClCompile Include="class\scene\ResultScene.cpp" />
+    <ClCompile Include="class\scene\SceneChangeAnimation\SceneChangeAnimation.cpp" />
     <ClCompile Include="class\scene\TestScene.cpp" />
     <ClCompile Include="class\scene\Title.cpp" />
     <ClCompile Include="DirectXGame\Externals\imnodes\imnodes.cpp" />
@@ -302,6 +303,7 @@
     <ClInclude Include="class\GameObjects\Weapon\WeaponConfig.h" />
     <ClInclude Include="class\scene\GameScene.h" />
     <ClInclude Include="class\scene\ResultScene.h" />
+    <ClInclude Include="class\scene\SceneChangeAnimation\SceneChangeAnimation.h" />
     <ClInclude Include="class\scene\TestScene.h" />
     <ClInclude Include="class\scene\Title.h" />
     <ClInclude Include="DirectXGame\Externals\imnodes\imnodes.h" />
