GameSceneでのシーン遷移アニメーションを3Dに

--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="class\scene\GameScene.cpp" />
     <ClCompile Include="class\scene\ResultScene.cpp" />
     <ClCompile Include="class\scene\SceneChangeAnimation\SceneChangeAnimation.cpp" />
+    <ClCompile Include="class\scene\SceneChangeAnimation\SceneChangeAnimationForPlane.cpp" />
     <ClCompile Include="class\scene\TestScene.cpp" />
     <ClCompile Include="class\scene\Title.cpp" />
     <ClCompile Include="DirectXGame\Externals\imnodes\imnodes.cpp" />
@@ -304,6 +305,7 @@
     <ClInclude Include="class\scene\GameScene.h" />
     <ClInclude Include="class\scene\ResultScene.h" />
     <ClInclude Include="class\scene\SceneChangeAnimation\SceneChangeAnimation.h" />
+    <ClInclude Include="class\scene\SceneChangeAnimation\SceneChangeAnimationForPlane.h" />
     <ClInclude Include="class\scene\TestScene.h" />
     <ClInclude Include="class\scene\Title.h" />
     <ClInclude Include="DirectXGame\Externals\imnodes\imnodes.h" />
