--- a/FL1.vcxproj.filters
+++ b/FL1.vcxproj.filters
@@ -300,6 +300,9 @@
     <ClCompile Include="class\scene\SceneChangeAnimation\SceneChangeAnimation.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="class\scene\SceneChangeAnimation\SceneChangeAnimationForPlane.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\scene\TestScene.h">
@@ -657,6 +660,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="class\scene\SceneChangeAnimation\SceneChangeAnimation.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="class\scene\SceneChangeAnimation\SceneChangeAnimationForPlane.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
