--- a/resources/json/Weapons/Launcher/Launcher_R_C.json
+++ b/resources/json/Weapons/Launcher/Launcher_R_C.json
@@ -9,7 +9,7 @@
     "diffusingBulletRange_y": 0.0,
     "diffusingBulletRange_z": 0.0,
     "jsonFileName": "Launcher_R_C.json",
-    "modelName": "resources/model/Weapon/Gun/Launcher\\Launcher.gltf",
+    "modelName": "resources/model/Weapon/Gun/Launcher/Launcher.gltf",
     "name": "Launcher",
     "rarity": 0,
     "reloadTime": 0.0,
