--- a/resources/json/Weapons/Launcher/Launcher_R_C.json
+++ b/resources/json/Weapons/Launcher/Launcher_R_C.json
@@ -1,6 +1,7 @@
 {
     "animName": "PowerShot",
     "attackSEFileName": "PowerShot.mp3",
+    "attackEffectName": "",
     "attackSkillGain": 100.0,
     "bulletNum": 7,
     "bulletType": 3,
