--- a/resources/json/Weapons/Launcher/Launcher_R_R.json
+++ b/resources/json/Weapons/Launcher/Launcher_R_R.json
@@ -1,4 +1,7 @@
 {
+    "animName": "",
+    "attackEffectName": "",
+    "attackSEFileName": "",
     "attackSkillGain": 100.0,
     "bulletNum": 7,
     "bulletType": 3,
@@ -8,17 +11,14 @@
     "diffusingBulletRange_x": 0.0,
     "diffusingBulletRange_y": 0.0,
     "diffusingBulletRange_z": 0.0,
-    "jsonFileName": "Launcher_R_C.json",
-    "attackSEFileName": "",
-    "attackEffectName": "",
-    "texName": "",
-    "animName": "",
+    "jsonFileName": "Launcher_R_R.json",
     "modelName": "resources/model/Weapon/Gun/Launcher/Launcher.gltf",
     "name": "Launcher",
-    "rarity": 0,
+    "rarity": 2,
     "reloadTime": 0.0,
     "sameBulletNum": 0,
     "shotIntervalTime": 1.5,
     "storeTime": 0.0,
+    "texName": "",
     "type": 3
 }
