--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -150,6 +150,8 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="class\Effect\Bullet\Child\BulletLineEffect.cpp" />
+    <ClCompile Include="class\Effect\Bullet\BulletEffector.cpp" />
     <ClCompile Include="class\Audio\AudioPlayer.cpp" />
     <ClCompile Include="class\Componets\Animation\Anim.cpp" />
     <ClCompile Include="class\Componets\Animation\AnimationManager.cpp" />
@@ -271,11 +273,15 @@
     <ClCompile Include="class\Audio\SEPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="class\Effect\Bullet\BulletEffectIncluder.h" />
+    <ClInclude Include="class\Effect\Bullet\Child\BulletLineEffect.h" />
+    <ClInclude Include="class\Effect\Bullet\BulletEffector.h" />
     <ClInclude Include="class\Audio\AudioConfig.h" />
     <ClInclude Include="class\Audio\AudioPlayer.h" />
     <ClInclude Include="class\Componets\Animation\Anim.h" />
     <ClInclude Include="class\Componets\Animation\AnimationManager.h" />
     <ClInclude Include="class\Componets\Animation\AnimationStructs.h" />
+    <ClInclude Include="class\Effect\Bullet\IBulletEffect.h" />
     <ClInclude Include="class\GameObjects\Tutorial\TutorialData\AttackTutorial.h" />
     <ClInclude Include="class\GameObjects\Tutorial\TutorialData\CollectTutorial.h" />
     <ClInclude Include="class\GameObjects\Tutorial\TutorialData\MoveTutorial.h" />
