--- a/FL1.vcxproj.filters
+++ b/FL1.vcxproj.filters
@@ -378,6 +378,9 @@
     <ClCompile Include="class\Effect\Bullet\Child\BulletLineEffect.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="class\Effect\Bullet\Child\ExplosiveBulletEffect.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\scene\TestScene.h">
@@ -837,6 +840,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="class\Effect\Bullet\BulletEffectIncluder.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="class\Effect\Bullet\Child\ExplosiveBulletEffect.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
