--- a/resources/json/Weapons/Launcher/Launcher_R_C.json
+++ b/resources/json/Weapons/Launcher/Launcher_R_C.json
@@ -1,7 +1,7 @@
 {
     "animName": "PowerShot",
     "attackEffectName": "ShotSmoke",
-    "attackSEFileName": "PowerShot.mp3",
+    "attackSEFileName": "LauncherShot.mp3",
     "attackSkillGain": 100.0,
     "bulletNum": 7,
     "bulletType": 3,
