--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -150,6 +150,8 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="class\Effect\Bullet\Child\BulletLineEffect.cpp" />
+    <ClCompile Include="class\Effect\Bullet\BulletEffector.cpp" />
     <ClCompile Include="class\Audio\AudioPlayer.cpp" />
     <ClCompile Include="class\Componets\Animation\Anim.cpp" />
     <ClCompile Include="class\Componets\Animation\AnimationManager.cpp" />
@@ -251,6 +253,7 @@
     <ClCompile Include="class\Effect\EffectEditor.cpp" />
     <ClCompile Include="class\Componets\EasingEditor.cpp" />
     <ClCompile Include="class\Componets\EaseMachine.cpp" />
+    <ClCompile Include="class\Effect\Bullet\Child\ExplosiveBulletEffect.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\StateBase.cpp" />
     <ClCompile Include="class\GameObjects\Enemy\State\WaitState.cpp" />
@@ -272,11 +275,15 @@
     <ClCompile Include="class\Audio\SEPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="class\Effect\Bullet\BulletEffectIncluder.h" />
+    <ClInclude Include="class\Effect\Bullet\Child\BulletLineEffect.h" />
+    <ClInclude Include="class\Effect\Bullet\BulletEffector.h" />
     <ClInclude Include="class\Audio\AudioConfig.h" />
     <ClInclude Include="class\Audio\AudioPlayer.h" />
     <ClInclude Include="class\Componets\Animation\Anim.h" />
     <ClInclude Include="class\Componets\Animation\AnimationManager.h" />
     <ClInclude Include="class\Componets\Animation\AnimationStructs.h" />
+    <ClInclude Include="class\Effect\Bullet\IBulletEffect.h" />
     <ClInclude Include="class\GameObjects\Tutorial\TutorialData\AttackTutorial.h" />
     <ClInclude Include="class\GameObjects\Tutorial\TutorialData\CollectTutorial.h" />
     <ClInclude Include="class\GameObjects\Tutorial\TutorialData\MoveTutorial.h" />
@@ -422,6 +429,7 @@
     <ClInclude Include="class\Componets\SerialAnimation.h" />
     <ClInclude Include="class\GameObjects\Player\Anim\RobotAnimManager.h" />
     <ClInclude Include="class\Audio\SEPlayer.h" />
+    <ClInclude Include="class\Effect\Bullet\Child\ExplosiveBulletEffect.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
